--- a/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Personnalization_MultiState/Data_Prep.ipynb
@@ -19,7 +19,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "  0   1 \n",
+       "700 476 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_nejm <- read.table(\"../Validation/full_data_validation_NO_ITD.tsv\")\n",
+    "\n",
+    "# Rename columns like in Cardiff\n",
+    "\n",
+    "df_nejm <- df_nejm %>% rename(OS_stat = OS_Status, gender = Gender , age = Age, hb = HB, bm_blasts = BM_Blasts, plt = PLT, wbc = WBC)\n",
+    "# Add CR Relapse and their status from AMLSG_Clinical:\n",
+    "\n",
+    "load.Rdata(\"../Validation/AMLSG_Clinical_Anon.RData\",\"val_data\")\n",
+    "rownames(val_data) <- val_data$PDID\n",
+    "\n",
+    "df_nejm <- merge(df_nejm,val_data[,c(\"PDID\",\"CR_date\",\"rfs\",\"rfsstat\")],by = 0)\n",
+    "df_nejm <- df_nejm %>% rename(CR = CR_date, Relapse = rfs , Relapse_stat = rfsstat)\n",
+    "\n",
+    "df_nejm$CR <- as.numeric(df_nejm$CR) / 365\n",
+    "df_nejm$Relapse <- df_nejm$Relapse / 365\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Handle  CR stat and Relapse stat\n",
+    "\n",
+    "# For CR stat , we say that when CR is Na the status is 0 or not Na but CR greater than OS\n",
+    "\n",
+    "df_nejm$CR_stat <- ifelse(is.na(df_nejm$CR) | (!is.na(df_nejm$CR) & df_nejm$CR>=df_nejm$OS),0,1)\n",
+    "df_nejm[is.na(df_nejm$CR) |is.na(df_nejm$Relapse) |( !is.na(df_nejm$CR) &!is.na(df_nejm$Relapse) & round(df_nejm$CR+df_nejm$Relapse,5)>=round(df_nejm$OS,5)) ,\"Relapse_stat\"] <- 0\n",
+    "table(df_nejm$Relapse_stat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +83,7 @@
       "text/plain": [
        "\n",
        "  0   1 \n",
-       "632 544 "
+       "700 476 "
       ]
      },
      "metadata": {},
@@ -60,7 +105,7 @@
       "text/plain": [
        "\n",
        "   0    1 \n",
-       "1111   65 "
+       "1044  132 "
       ]
      },
      "metadata": {},
@@ -71,7 +116,7 @@
       "text/plain": [
        "\n",
        "  0   1 \n",
-       "742 434 "
+       "809 367 "
       ]
      },
      "metadata": {},
@@ -118,7 +163,7 @@
     "## and we put 0 when patients did not experienced CR (because you need CR before Relapse)\n",
     "#we just made sure that CR+Relapse is lower than OS\n",
     "\n",
-    "df_nejm[is.na(df_nejm$CR) |is.na(df_nejm$Relapse) |( !is.na(df_nejm$CR) & df_nejm$CR+df_nejm$Relapse>=df_nejm$OS) ,\"Relapse_stat\"] <- 0\n",
+    "df_nejm[is.na(df_nejm$CR) |is.na(df_nejm$Relapse) |( !is.na(df_nejm$CR) &!is.na(df_nejm$Relapse) & round(df_nejm$CR+df_nejm$Relapse,5)>=round(df_nejm$OS,5)) ,\"Relapse_stat\"] <- 0\n",
     " \n",
     "# # Handle CR\n",
     "df_nejm[df_nejm$CR_stat==0,\"CR\"] <- df_nejm[df_nejm$CR_stat==0,\"OS\"] \n",
@@ -173,7 +218,8 @@
     "table(df_nejm$Death_in_CR_stat)\n",
     "table(df_nejm$Death_in_Relapse_stat)\n",
     "table(df_nejm$Death_without_stat)\n",
-    "write.table(df_nejm,\"df_nejm_personnalization.tsv\")"
+    "write.table(df_nejm,\"df_nejm_personnalization.tsv\")\n",
+    "\n"
    ]
   },
   {
