--- a/analysis/prognosis/Prognosis_locked/Transplant/Untitled.ipynb
+++ b/analysis/prognosis/Prognosis_locked/Transplant/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     "## and we put 0 when patients did not experienced CR (because you need CR before Relapse)\n",
     "#we just made sure that CR+Relapse is lower than OS\n",
     "\n",
-    "df_nejm[is.na(df_nejm$CR) |is.na(df_nejm$Relapse) |( !is.na(df_nejm$CR) & df_nejm$CR+df_nejm$Relapse>=df_nejm$OS) ,\"Relapse_stat\"] <- 0\n",
+    "df_nejm[is.na(df_nejm$CR) |is.na(df_nejm$Relapse) |( !is.na(df_nejm$CR) &!is.na(df_nejm$Relapse) & round(df_nejm$CR+df_nejm$Relapse,5)>=round(df_nejm$OS,5)) ,\"Relapse_stat\"] <- 0\n",
     " \n",
     "# # Handle CR\n",
     "df_nejm[df_nejm$CR_stat==0,\"CR\"] <- df_nejm[df_nejm$CR_stat==0,\"OS\"] \n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "<table>\n",
        "<thead><tr><th scope=col>Row.names</th><th scope=col>NPM1</th><th scope=col>CEBPA_bi</th><th scope=col>ITD</th><th scope=col>ASXL1</th><th scope=col>ATRX</th><th scope=col>BCOR</th><th scope=col>BRAF</th><th scope=col>CBL</th><th scope=col>CBLB</th><th scope=col>⋯</th><th scope=col>Death_in_Relapse</th><th scope=col>Death_in_Relapse_stat</th><th scope=col>Death_without</th><th scope=col>Death_without_stat</th><th scope=col>molecular_classification</th><th scope=col>NEW_favorable</th><th scope=col>NEW_intermediate</th><th scope=col>NEW_adverse</th><th scope=col>TPL_date</th><th scope=col>TPL_o</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>PD10790a        </td><td>0               </td><td>0               </td><td>0               </td><td>1               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>⋯               </td><td>0.7589041       </td><td>1               </td><td>0.7589041       </td><td>0               </td><td>NEW_intermediate</td><td>0               </td><td>1               </td><td>0               </td><td>0.2054795       </td><td>1               </td></tr>\n",
+       "\t<tr><td>PD10790a        </td><td>0               </td><td>0               </td><td>0               </td><td>1               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>⋯               </td><td>0.7589041       </td><td>0               </td><td>0.7589041       </td><td>0               </td><td>NEW_intermediate</td><td>0               </td><td>1               </td><td>0               </td><td>0.2054795       </td><td>1               </td></tr>\n",
        "\t<tr><td>PD10793a        </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>⋯               </td><td>4.7150685       </td><td>0               </td><td>4.7150685       </td><td>0               </td><td>NEW_adverse     </td><td>0               </td><td>0               </td><td>1               </td><td>0.2356164       </td><td>1               </td></tr>\n",
        "\t<tr><td>PD10794a        </td><td>1               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>⋯               </td><td>5.6739726       </td><td>0               </td><td>5.6739726       </td><td>0               </td><td>NEW_favorable   </td><td>1               </td><td>0               </td><td>0               </td><td>0.2684932       </td><td>1               </td></tr>\n",
        "\t<tr><td>PD10795a        </td><td>1               </td><td>0               </td><td>1               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>0               </td><td>⋯               </td><td>4.5095890       </td><td>0               </td><td>4.5095890       </td><td>0               </td><td>NEW_intermediate</td><td>0               </td><td>1               </td><td>0               </td><td>       NA       </td><td>0               </td></tr>\n",
@@ -132,7 +132,7 @@
        "\\begin{tabular}{r|lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll}\n",
        " Row.names & NPM1 & CEBPA\\_bi & ITD & ASXL1 & ATRX & BCOR & BRAF & CBL & CBLB & ⋯ & Death\\_in\\_Relapse & Death\\_in\\_Relapse\\_stat & Death\\_without & Death\\_without\\_stat & molecular\\_classification & NEW\\_favorable & NEW\\_intermediate & NEW\\_adverse & TPL\\_date & TPL\\_o\\\\\n",
        "\\hline\n",
-       "\t PD10790a           & 0                  & 0                  & 0                  & 1                  & 0                  & 0                  & 0                  & 0                  & 0                  & ⋯                  & 0.7589041          & 1                  & 0.7589041          & 0                  & NEW\\_intermediate & 0                  & 1                  & 0                  & 0.2054795          & 1                 \\\\\n",
+       "\t PD10790a           & 0                  & 0                  & 0                  & 1                  & 0                  & 0                  & 0                  & 0                  & 0                  & ⋯                  & 0.7589041          & 0                  & 0.7589041          & 0                  & NEW\\_intermediate & 0                  & 1                  & 0                  & 0.2054795          & 1                 \\\\\n",
        "\t PD10793a           & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & ⋯                  & 4.7150685          & 0                  & 4.7150685          & 0                  & NEW\\_adverse      & 0                  & 0                  & 1                  & 0.2356164          & 1                 \\\\\n",
        "\t PD10794a           & 1                  & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & ⋯                  & 5.6739726          & 0                  & 5.6739726          & 0                  & NEW\\_favorable    & 1                  & 0                  & 0                  & 0.2684932          & 1                 \\\\\n",
        "\t PD10795a           & 1                  & 0                  & 1                  & 0                  & 0                  & 0                  & 0                  & 0                  & 0                  & ⋯                  & 4.5095890          & 0                  & 4.5095890          & 0                  & NEW\\_intermediate & 0                  & 1                  & 0                  &        NA          & 0                 \\\\\n",
@@ -144,7 +144,7 @@
        "\n",
        "| Row.names | NPM1 | CEBPA_bi | ITD | ASXL1 | ATRX | BCOR | BRAF | CBL | CBLB | ⋯ | Death_in_Relapse | Death_in_Relapse_stat | Death_without | Death_without_stat | molecular_classification | NEW_favorable | NEW_intermediate | NEW_adverse | TPL_date | TPL_o |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| PD10790a         | 0                | 0                | 0                | 1                | 0                | 0                | 0                | 0                | 0                | ⋯                | 0.7589041        | 1                | 0.7589041        | 0                | NEW_intermediate | 0                | 1                | 0                | 0.2054795        | 1                |\n",
+       "| PD10790a         | 0                | 0                | 0                | 1                | 0                | 0                | 0                | 0                | 0                | ⋯                | 0.7589041        | 0                | 0.7589041        | 0                | NEW_intermediate | 0                | 1                | 0                | 0.2054795        | 1                |\n",
        "| PD10793a         | 0                | 0                | 0                | 0                | 0                | 0                | 0                | 0                | 0                | ⋯                | 4.7150685        | 0                | 4.7150685        | 0                | NEW_adverse      | 0                | 0                | 1                | 0.2356164        | 1                |\n",
        "| PD10794a         | 1                | 0                | 0                | 0                | 0                | 0                | 0                | 0                | 0                | ⋯                | 5.6739726        | 0                | 5.6739726        | 0                | NEW_favorable    | 1                | 0                | 0                | 0.2684932        | 1                |\n",
        "| PD10795a         | 1                | 0                | 1                | 0                | 0                | 0                | 0                | 0                | 0                | ⋯                | 4.5095890        | 0                | 4.5095890        | 0                | NEW_intermediate | 0                | 1                | 0                |        NA        | 0                |\n",
@@ -161,7 +161,7 @@
        "5 PD10796a  0    1        0   0     0    0    0    0   0    ⋯ 2.8520548       \n",
        "6 PD10798a  1    0        0   0     0    0    0    0   0    ⋯ 4.4931507       \n",
        "  Death_in_Relapse_stat Death_without Death_without_stat\n",
-       "1 1                     0.7589041     0                 \n",
+       "1 0                     0.7589041     0                 \n",
        "2 0                     4.7150685     0                 \n",
        "3 0                     5.6739726     0                 \n",
        "4 0                     4.5095890     0                 \n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +223,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Total cases:\"\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "647"
+      ],
+      "text/latex": [
+       "647"
+      ],
+      "text/markdown": [
+       "647"
+      ],
       "text/plain": [
-       "   Min. 1st Qu.  Median    Mean 3rd Qu.    Max.    NA's \n",
-       "    0.0    72.0   123.5   231.3   287.5  3034.0     872 "
+       "[1] 647"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Case 1 : CR before  transplant:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "521"
+      ],
+      "text/latex": [
+       "521"
+      ],
+      "text/markdown": [
+       "521"
+      ],
+      "text/plain": [
+       "[1] 521"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Subcase1 : Transplant before Relapse:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "120"
+      ],
+      "text/latex": [
+       "120"
+      ],
+      "text/markdown": [
+       "120"
+      ],
+      "text/plain": [
+       "[1] 120"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Subcase2 : Transplant after Relapse:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "179"
+      ],
+      "text/latex": [
+       "179"
+      ],
+      "text/markdown": [
+       "179"
+      ],
+      "text/plain": [
+       "[1] 179"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Subcase3 : No Relapse:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "222"
+      ],
+      "text/latex": [
+       "222"
+      ],
+      "text/markdown": [
+       "222"
+      ],
+      "text/plain": [
+       "[1] 222"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Case 2 : TrCR = transplant:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>OS</th><th scope=col>CR</th><th scope=col>Relapse</th><th scope=col>TPL_date</th><th scope=col>OS_stat</th><th scope=col>Relapse_stat</th><th scope=col>CR_stat</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>154</th><td>0.6575342</td><td>0.2931507</td><td>0.6575342</td><td>0.2931507</td><td>1        </td><td>0        </td><td>1        </td></tr>\n",
+       "\t<tr><th scope=row>174</th><td>0.4301370</td><td>0.1753425</td><td>0.4301370</td><td>0.1753425</td><td>1        </td><td>0        </td><td>1        </td></tr>\n",
+       "\t<tr><th scope=row>232</th><td>2.7041096</td><td>0.4410959</td><td>1.4164384</td><td>0.4410959</td><td>1        </td><td>1        </td><td>1        </td></tr>\n",
+       "\t<tr><th scope=row>1128</th><td>5.0109589</td><td>0.3479452</td><td>5.0109589</td><td>0.3479452</td><td>0        </td><td>0        </td><td>1        </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & OS & CR & Relapse & TPL\\_date & OS\\_stat & Relapse\\_stat & CR\\_stat\\\\\n",
+       "\\hline\n",
+       "\t154 & 0.6575342 & 0.2931507 & 0.6575342 & 0.2931507 & 1         & 0         & 1        \\\\\n",
+       "\t174 & 0.4301370 & 0.1753425 & 0.4301370 & 0.1753425 & 1         & 0         & 1        \\\\\n",
+       "\t232 & 2.7041096 & 0.4410959 & 1.4164384 & 0.4410959 & 1         & 1         & 1        \\\\\n",
+       "\t1128 & 5.0109589 & 0.3479452 & 5.0109589 & 0.3479452 & 0         & 0         & 1        \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| <!--/--> | OS | CR | Relapse | TPL_date | OS_stat | Relapse_stat | CR_stat |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| 154 | 0.6575342 | 0.2931507 | 0.6575342 | 0.2931507 | 1         | 0         | 1         |\n",
+       "| 174 | 0.4301370 | 0.1753425 | 0.4301370 | 0.1753425 | 1         | 0         | 1         |\n",
+       "| 232 | 2.7041096 | 0.4410959 | 1.4164384 | 0.4410959 | 1         | 1         | 1         |\n",
+       "| 1128 | 5.0109589 | 0.3479452 | 5.0109589 | 0.3479452 | 0         | 0         | 1         |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     OS        CR        Relapse   TPL_date  OS_stat Relapse_stat CR_stat\n",
+       "154  0.6575342 0.2931507 0.6575342 0.2931507 1       0            1      \n",
+       "174  0.4301370 0.1753425 0.4301370 0.1753425 1       0            1      \n",
+       "232  2.7041096 0.4410959 1.4164384 0.4410959 1       1            1      \n",
+       "1128 5.0109589 0.3479452 5.0109589 0.3479452 0       0            1      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Case 2 : Transplant before CR:\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "92"
+      ],
+      "text/latex": [
+       "92"
+      ],
+      "text/markdown": [
+       "92"
+      ],
+      "text/plain": [
+       "[1] 92"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Subcase 1: Relapse\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "33"
+      ],
+      "text/latex": [
+       "33"
+      ],
+      "text/markdown": [
+       "33"
+      ],
+      "text/plain": [
+       "[1] 33"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Subcase 2: No Relapse\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "59"
+      ],
+      "text/latex": [
+       "59"
+      ],
+      "text/markdown": [
+       "59"
+      ],
+      "text/plain": [
+       "[1] 59"
       ]
      },
      "metadata": {},
@@ -238,13 +479,36 @@
     }
    ],
    "source": [
-    "# colnames(val_data)\n",
-    "summary(val_data$Time_1CR_TPL,na.rm=F)"
+    "print(\"Total cases:\")\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date),])\n",
+    "\n",
+    "\n",
+    "print(\"Case 1 : CR before  transplant:\")\n",
+    "\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$CR<nejm_data_tpl$TPL_date & nejm_data_tpl$CR_stat==1 ,])\n",
+    "print(\"Subcase1 : Transplant before Relapse:\")\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$CR<nejm_data_tpl$TPL_date & nejm_data_tpl$TPL_date<nejm_data_tpl$Relapse & nejm_data_tpl$Relapse_stat==1 ,])\n",
+    "print(\"Subcase2 : Transplant after Relapse:\")\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$CR<nejm_data_tpl$TPL_date & nejm_data_tpl$TPL_date>nejm_data_tpl$Relapse & nejm_data_tpl$Relapse_stat==1 ,])\n",
+    "print(\"Subcase3 : No Relapse:\")\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$CR<nejm_data_tpl$TPL_date & nejm_data_tpl$Relapse_stat==0 ,])\n",
+    "\n",
+    "print(\"Case 2 : TrCR = transplant:\")\n",
+    "(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$CR==nejm_data_tpl$TPL_date  ,c(\"OS\",\"CR\",\"Relapse\",\"TPL_date\",\"OS_stat\",\"Relapse_stat\",\"CR_stat\")])\n",
+    "\n",
+    "print(\"Case 2 : Transplant before CR:\")\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$TPL_date<nejm_data_tpl$CR & nejm_data_tpl$CR_stat==1 ,])\n",
+    "print(\"Subcase 1: Relapse\")\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$TPL_date<nejm_data_tpl$CR & nejm_data_tpl$CR_stat==1 & nejm_data_tpl$Relapse_stat==1 ,])\n",
+    "print(\"Subcase 2: No Relapse\")\n",
+    "nrow(nejm_data_tpl[!is.na(nejm_data_tpl$TPL_date) & nejm_data_tpl$TPL_date<nejm_data_tpl$CR & nejm_data_tpl$CR_stat==1 & nejm_data_tpl$Relapse_stat==0 ,])\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
